# omni

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  PLAN-BLOB-GC.md  README.md  docker-compose.dev.yml
.github/workflows/: build-ai.yml  build-cli.yml  build-service.yml  ci.yml  package-deployment.yml
benchmarks/: Cargo.toml
cli/: Cargo.toml
cli/src/: compose.rs  diagnostics.rs  env_file.rs  main.rs  managed_files.rs  output.rs  releases.rs
cli/src/commands/: backup.rs  compose_passthrough.rs  doctor.rs  env.rs  logs.rs  mod.rs  pull.rs  status.rs  up.rs  upgrade.rs  version.rs
connectors/atlassian/: Cargo.toml  Dockerfile
connectors/clickup/: README.md  pyproject.toml
connectors/darwinbox/: Cargo.toml  Dockerfile
connectors/darwinbox/src/: actions.rs  auth.rs  client.rs  config.rs  connector.rs  credentials.rs  lib.rs  main.rs  mappers.rs  models.rs  sync.rs
connectors/darwinbox/tests/: integration_test.rs
connectors/filesystem/: Cargo.toml  Dockerfile
connectors/filesystem/src/: connector.rs  lib.rs  main.rs  models.rs  scanner.rs  sync.rs  watcher.rs
connectors/fireflies/: Cargo.toml  Dockerfile
connectors/github/: Dockerfile  pyproject.toml
connectors/google/: Cargo.toml  Dockerfile
connectors/hubspot/: pyproject.toml
connectors/imap/: Cargo.toml  Dockerfile
connectors/linear/: package-lock.json
connectors/microsoft/: pyproject.toml
connectors/nextcloud/: Cargo.toml  Dockerfile
connectors/notion/: pyproject.toml
connectors/paperless/: pyproject.toml
connectors/slack/: Cargo.toml  Dockerfile
connectors/web/: Cargo.toml  Dockerfile
connectors/web/src/: api.rs  connector.rs  lib.rs  main.rs  models.rs  sync.rs
connectors/web/tests/: sync_integration_test.rs  sync_state_test.rs
connectors/web/tests/common/: mod.rs
connectors/windshift/: Dockerfile  README.md  package-lock.json  package.json
docker/: docker-compose.benchmark.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.local-inference.yml  docker-compose.yml
docs/: cli.md  microsoft-connector-setup-guide.md
enterprise-benchmark/: README.md  filter_questions.py  load_corpus.py  merge_gpt54_adjusted.py  pyproject.toml  run_agentic.py  run_full_pipeline.py  run_rag.py  run_search.py  seed_deepseek_provider.py
enterprise-benchmark-ad-hoc/: README.md
enterprise-benchmark-ad-hoc/analysis/: analyze_by_category.py  analyze_gold_docs.py  analyze_results.py  fair_query_analysis.py  fix_doc_ids.py  optimal_query_analysis.py  pre_eval_cleanup.py
enterprise-benchmark-ad-hoc/legacy/: seed_kimi_provider.py
enterprise-benchmark/eval_fork/: chat_completions_llm.py  factory.py  install.sh
frontend/: package-lock.json  package.json
plans/: issue-340-mcp-resources-prompts.md
scripts/: dev-stack.sh  install-cli.sh  populate_atlassian_test_data.py  seed-db.sh
sdk/python/: README.md  pyproject.toml
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  connector.rs  context.rs  lib.rs  mcp_adapter.rs  models.rs  server.rs
sdk/rust/tests/: mcp_adapter_test.rs  server_integration_test.rs
sdk/rust/tests/common/: mod.rs
sdk/typescript/: README.md  package-lock.json  package.json
services/ai/: Cargo.toml  Dockerfile  agent_loop.py  attachments.py  config.py  main.py  prompts.py  pyproject.toml  requirements.txt  state.py  storage.py  test_chunking.py
services/api-gateway/: Cargo.toml  Dockerfile
services/docling/: Dockerfile  app.py
services/indexer/: Cargo.toml  Dockerfile
services/indexer/migrations/: 001_create_users_table.sql  002_create_sources_table.sql  004_create_embeddings_table.sql  V3__create_documents_table.sql  V4__create_embeddings_table.sql
services/indexer/src/: error.rs  events.rs  lib.rs  main.rs  processor.rs  queue_processor.rs
services/indexer/tests/: api_integration_test.rs  event_processor_test.rs  full_flow_test.rs  integration_tests.rs
services/indexer/tests/common/: mod.rs
services/memory/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  server.py
services/memory/tests/: test_service.py
services/migrations/: 057_add_chat_message_document_mentions.sql  061_add_imap_source_type_and_credentials.sql  072_add_ms_teams_source_type.sql  079_create_model_usage_table.sql  081_rename_vllm_to_openai_compatible.sql  082_create_evaluation_tables.sql  083_add_memory_mode.sql  083_enable_rls.sql  084_add_memory_mode.sql  084_allow_realtime_sync_type.sql  085_create_app_role.sql  085_upgrade_paradedb_to_0.23.1.sql  086_enable_rls_policies.sql  086_per_user_source_credentials.sql  087_align_mutable_segment_rows_with_indexer_batch.sql  087_personal_source_creds_to_user.sql  088_soft_delete_chats.sql  089_add_configuration_table.sql  090_create_mem0_schema.sql  093_harden_sync_run_lifecycle.sql  094_add_loaded_toolsets_to_chats.sql  094_create_agent_capabilities.sql  095_create_agent_capabilities.sql  100_add_darwinbox_source_type.sql  103_extend_tool_approvals_for_interventions.sql  103_persist_tool_approval_call_ids.sql  104_create_compactions_tables.sql  105_create_skills_table.sql  Dockerfile  (+3 more)
services/searcher/: Cargo.toml  Dockerfile
services/searcher/src/: capabilities_repository.rs  handlers.rs  lib.rs  main.rs  models.rs  query_parser.rs  search.rs  search_repository.rs  suggested_questions.rs  typeahead.rs
services/searcher/tests/: integration_tests.rs
services/searcher/tests/common/: mod.rs
shared/: .env.example  Cargo.toml
shared/examples/: usage.rs
shared/src/: constants.rs  content_extractor.rs  embedding_queue.rs  lib.rs  models.rs  queue.rs  sdk_client.rs  service_auth.rs  telemetry.rs  test_environment.rs
shared/src/clients/: ai.rs  docling.rs
shared/src/db/: error.rs  mod.rs  pool.rs
shared/src/db/repositories/: configuration.rs  content_blob.rs  document.rs  embedding.rs  mod.rs  service_credentials.rs  source.rs  sync_run.rs  user.rs
shared/src/storage/: postgres.rs  s3.rs
shared/src/traits/: mod.rs  repository.rs
shared/tests/: event_queue_test.rs  service_credentials_test.rs
web/: Dockerfile  package-lock.json  package.json  playwright.config.ts
(+562 files in other folders)
