[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omni-benchmark"
version = "0.1.0"
description = "Driver scripts for running Omni against the Onyx EnterpriseRAG-Bench"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "python-ulid>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
