[package]
name = "omni-darwinbox-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "omni_darwinbox_connector"
path = "src/lib.rs"

[[bin]]
name = "omni-darwinbox-connector"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
omni-connector-sdk = { path = "../../sdk/rust" }
axum = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
time = { workspace = true }
url = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
wiremock = "0.6"
