[package]
name = "omni-web-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omni-web-connector"
path = "src/main.rs"

[dependencies]
omni-connector-sdk = { path = "../../sdk/rust" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
spider = { version = "2", default-features = false, features = ["basic", "sitemap", "headers"] }
scraper = "0.21"
sha2 = "0.10"
url = "2.5"
base64 = "0.21"

[dev-dependencies]
shared = { path = "../../shared" }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "redis"] }
axum-test = { workspace = true }
omni-connector-manager = { path = "../../services/connector-manager" }
