[package]
name = "indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
pgvector = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
axum = { version = "0.7", features = ["tokio"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
chrono = { workspace = true }
shared = { path = "../../shared" }